# nanobank

./: 01_start.md  02_onboarding.md  README.md  connect.py  glossary.md  input.py  justfile  names.py  pyproject.toml  serial.py
dialogue/: banner.txt  dialogue.py
payments/: app.py  names.py  plain.py  random.py  use_api.py  with_class.py  with_events.py  with_functions.py
payments/experimental/: locales.py
