[tool.poetry]
name = "nanobank"
version = "0.1.0"
description = "Learn Python for finance from scratch"
authors = ["Evgeny Pogrebnyak <e.pogrebnyak@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
Faker = "^16.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
